--- a/forgotten/index.html
+++ b/forgotten/index.html
@@ -146,6 +146,28 @@ var divId = 0;
 <p>"WATCH OUT!"</p>
 <p><i>Door is busted down, followed by thick smoke.</i></p>
 </div>
+
+<div>
+    <h2>The Adventurer's Journal</h2>
+    <p>Today I ventured into the woods alone. Boss said I was supposed to have a team of 4 accompany me throughout the trip, but the people he picked were not worthy of the title "Explorer" - they were drunk almost all the time, weeing their pants whenever and trudging around like zombies. Filthy creatures they were, the lot!</p>
+    <p>Anyways, I travelled for days, through mirky waters and narrow pathways, unsure of what I was going to find. To be honest, I wasn't exactly sure where I was headed - there were no maps or a GPS system to guide me, nor was there any sign of society ahead. All I could do was to keep walking.</p>
+    <p>At one point my canteen was empty and the last remaining source of food I had were nothing but breadcrumbs. I felt like stopping to harvest berries from the trees around me - and there were few, yet more than enough - if it wasn't for the laser beam that suddenly appeared in the sky.</p>
+    <p>My curiosity got the better of me. I raced to the top of the hill ahead of me to get a closer look. I thought I was near people, but what I saw instead was terrifying.</p>
+    <p>There were thousands upon thousands of corpses - mostly skeletons - piled up around some strange machine in the ground. It was that particular machine that shot the laser up high into the sky. Very bright, it was! But why were there so many dead bodies?</p>
+    <p>I leaned forward to get a closer look. And that was when I heard shouting from behind the machine:</p>
+    <p>"How long until we turn this thing off, boss?"</p>
+    <p>"Around 2 more minutes, then we can throw the bodies in the laser!"</p>
+    <p>"Aye! Wanna visit Fred after this?"</p>
+    <p>"It's the 6th of August, Guy! We ain't getting welcomed to that nerd today!"</p>
+    <p>"Fair point!"</p>
+    <p>"Let's just get this job done, innit?"</p>
+    <p>Throw the bodies?! Throw the bodies into the laser?! That was the most insane thing I've ever heard in my life. These people were either war criminals or they had no care for corpses - although I fancy they might be both.</p>
+    <p>I crawled over to see if I could find the two people communicating with each other - then something hit me in the head, and I blacked out.</p>
+    <p>I am writing this in what seems to be a prison cell. The walls were irregular - there were 6 walls, each of different size, and a metal door with a small opening that seemed to be a window. With me in the room was a toilet, a bed with a pillow and blanket, a desk with some papers and a pencil, a lamp, and a flower pot next to the door. There was also a book titled "The Prison led by the Prisoners", but the contents were of a different language - one I could not read nor interpret.</p>
+    <p>I just hope I can get out of this place. I probably did something wrong, but not against the law. At least, not that I know of.</p>
+    <p>I wonder who these people are.</p>
+</div>
+
 </section>
 <p>TG9vayBhdCB0aGUgd29ybGQgYXJvdW5kIHlvdS4gSXQgbGl2ZXMgbGlrZSBpdCBkb2VzIG5vdCBrbm93IHlvdS4=</p>
 <span id="leftArrow" onclick="prevPage()">PREVIOUS</span>
