--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ section {
 <h4>PC PROJECTS</h4>
 <h5>Projects that cannot be directly accessible for mobile users.</h5>
 <ul id="pcpros">
+	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
 	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
 	<li><a href="./stopwatch/" class="specs">Stopwatch</a></li>
 	<li><a href="./stringtool/">Stringtool</a></li>
@@ -123,7 +124,7 @@ section {
 <ul>
 	<li><a href="./theProgressPage/">Progress Page</a></li>
 	<li><a href="./ScrollDown/">Scroll Down</a></li>
-	<li><a href="./textconverter/">Text Converter</a></li>
+	<li><a href="./textconverter/" class="specs">Text Converter</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
