updated discord rules

--- a/discordrules.html
+++ b/discordrules.html
@@ -23,34 +23,32 @@ As a member or moderator, either temporary or permanent, you are required to fol
 
 
 <h2>I. ACCOUNT</h2>
-You will be banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology, uncontrolled trolling or racism.
+You will be banned if you are caught having a profile picture, status, about me page, user tag, nickname or banner that directly implies NSFW, NSFL, extreme war ideology (especially nazism and fascism), uncontrolled trolling or discrimination.
 <br>
 You may either be kicked or banned if you are impersonating SciPred - not directly from the user profile, but from the actions you present in this server as well as outside the server.
 <br>
-You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server.
+You may also be kicked or banned for impersonating other known people, depending on the actions you present in this server as well as outside the server.
 
 
 
 <h2>II. CONTENT</h2>
-Speak English as much as possible. English is the main language in this server.
+Speak English. English is the main language in this server. If you wish to speak in vernacular, either get a translator or ask someone to assist you with translation.
 <br>
-Spam must only be sent in the designated spam channel, advertisement in the advertisement channel, and so on.
+Chains must only be done in the designated chain channel, advertisement in the advertisement channel, and so on.
 <br>
 No making fun of religious, life-threatening or political topics.
 <br>
 No toxicity, harrassment, or racism.
 <br>
-No starting flaming arguments.
+No starting flaming arguments or debates that can get out of hand.
 <br>
-No trying to spark debates that can get out of hand.
+No causing uncontrolled drama, self-pity, pessimism intended to spread to other people, existential crises, or false optimism.
 <br>
-No causing drama, self-pity, intended pessimism, existential crises, or false optimism.
-<br>
-Respect each and every one's principles, philosophies, conditions, religion, and race.
+Respect others as they would respect you.
 <br>
 No blackmailing or doxxing members.
 <br>
-Refrain from sharing private information with others.
+Refrain from sharing private information in the server.
 <br>
 No scamming or begging.
 <br>
@@ -58,24 +56,42 @@ No spam-pinging people.
 <br>
 No manipulating or mismanaging information.
 <br>
-No trojan horses, worms, viruses, IP address grabbers, NSFW or NSFL content, bloatware, and any other form of malware.
+No direct NSFW or NSFL content.
+<br>
+No adware, backdoors, DDoS, ransomware, bloatware, trojan horses, viruses, worms, spyware, rootkits, keyloggers, crimeware, RAM scrapers, phishing links, and any other form of malware.
 <br>
 No posting videos, images, gifs or files that intentionally crash Discord.
 <br>
 No posting files that harmfully manipulate the Discord GUI in any way.
 <br>
 No posting files that harmfully manipulate the computers or mobile devices of those using Discord in any way.
+<br>
+These include:
+<br>
+- Free Nitro scam links. Many of these usually have a single-character error in the link. Always double-check and report scams.
+<br>
+- Anything regarding "Free Nitro". The words get you muted. If you want to give away free Nitro, ask a staff member or give the Nitro in private.
+<br>
+- Links to Quick Driver Updater. EVERY DRIVER UPDATER IS MALWARE.
+<br>
+- VBS files. Many viruses come in the hidden form of VBS files.
+<br>
+- Gore Media. Regardless of the intention, it can come as a shock to many people in the server.
+<br>
+- Hentai. This ain't the right place for that.
 
 
 
 <h2>III. SPAMMING</h2>
-Spam may only be done in the spam channel. Any spam caught outside the designated channel may result in a mute, including:
+No spam. Any form of spam may result in a mute, including:
+<br>
+- General Spam: malvertisement, scams, etc.
 <br>
 - Copypasta: repeatedly sending messages with the same content.
 <br>
 - Self-Advertisement: repeatedly flooding the server with massive adverts. These include links to other channels, servers, and web pages.
 <br>
-- Emoji Spam: mass cluttering of emojis.
+- Emoji Spam: mass cluttering of emojis, or using every emoji in one message.
 <br>
 - Single-Letter Alphabetical Chains: The alphabet consists of 26 different letters. The longest single-letter chain formable is 52 letters long (A-Z, A-Z), and the shortest 2 letters (A, A). You cannot form a chain not in the spam channel longer than 2n characters, where n is the number of different characters in the chain. For single-Unicode chains, the longest you can form is 10.
 <br>
@@ -97,7 +113,9 @@ Spam may only be done in the spam channel. Any spam caught outside the designate
 <br>
 - Text Walls: Huge chunks of text that fill the screen up.
 <br>
-- Ping Walls: Massive pings. And make sure that the person/people you are pinging agree to the pinging.
+- Ping Walls: Massive pings.
+<br>
+Some of these - specifically chains - can be done in the chain channel.
 
 
 
@@ -108,9 +126,9 @@ No creating, modifying, or deleting roles, channels, invites and categories with
 <br>
 Do not abuse your moderation abilities. Do not use them to blackmail or dox people, force people into doing something that violates the rules, ban or kick people for no good reason, assign or remove roles from people without a sufficient reason or permission, mass-ping people or roles without a sufficient reason or permission, or violate the rules yourself using your presence as a staff member as an excuse.
 <br>
-Punishments for misbehavers that are not staff can vary depending on the offense. The minimum amount of time suggested for a manual mute is 1 hour. As the misbehaver commits more offenses, the mute duration is added. The mute duration progression is 1h-2h-4h-6h-12h-1d-3d-7d-14d. After 9 manual mutes, the offender is either kicked or banned. If it is a ban, it is not appealable. Any staff caught trying to make the ban appealable will be demoted.
+Punishments for misbehavers that are not staff can vary depending on the offense.
 <br>
-No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference.
+No inviting/kicking bots without sufficient permission from the owner. No modifying Carl-bot settings without sufficient permission from the owner. No banning or kicking because of personal preference. Anyone caught trying to appeal a ban will be demoted unless the reason is legitimate and has evidence to back up the appeal. Anyone caught trying to delete evidence for a ban will be demoted.
 <br>
 Staff receive a temporary demote upon causing an infraction, the duration of the demote dependent on the violation caused. Upon 3 infractions the targeted staff member is permanently demoted and muted for one week.
 <br>
