--- a/forgotten/index.html
+++ b/forgotten/index.html
@@ -148,24 +148,48 @@ var divId = 0;
 </div>
 
 <div>
-    <h2>The Adventurer's Journal</h2>
-    <p>Today I ventured into the woods alone. Boss said I was supposed to have a team of 4 accompany me throughout the trip, but the people he picked were not worthy of the title "Explorer" - they were drunk almost all the time, weeing their pants whenever and trudging around like zombies. Filthy creatures they were, the lot!</p>
-    <p>Anyways, I travelled for days, through mirky waters and narrow pathways, unsure of what I was going to find. To be honest, I wasn't exactly sure where I was headed - there were no maps or a GPS system to guide me, nor was there any sign of society ahead. All I could do was to keep walking.</p>
-    <p>At one point my canteen was empty and the last remaining source of food I had were nothing but breadcrumbs. I felt like stopping to harvest berries from the trees around me - and there were few, yet more than enough - if it wasn't for the laser beam that suddenly appeared in the sky.</p>
-    <p>My curiosity got the better of me. I raced to the top of the hill ahead of me to get a closer look. I thought I was near people, but what I saw instead was terrifying.</p>
-    <p>There were thousands upon thousands of corpses - mostly skeletons - piled up around some strange machine in the ground. It was that particular machine that shot the laser up high into the sky. Very bright, it was! But why were there so many dead bodies?</p>
-    <p>I leaned forward to get a closer look. And that was when I heard shouting from behind the machine:</p>
-    <p>"How long until we turn this thing off, boss?"</p>
-    <p>"Around 2 more minutes, then we can throw the bodies in the laser!"</p>
-    <p>"Aye! Wanna visit Fred after this?"</p>
-    <p>"It's the 6th of August, Guy! We ain't getting welcomed to that nerd today!"</p>
-    <p>"Fair point!"</p>
-    <p>"Let's just get this job done, innit?"</p>
-    <p>Throw the bodies?! Throw the bodies into the laser?! That was the most insane thing I've ever heard in my life. These people were either war criminals or they had no care for corpses - although I fancy they might be both.</p>
-    <p>I crawled over to see if I could find the two people communicating with each other - then something hit me in the head, and I blacked out.</p>
-    <p>I am writing this in what seems to be a prison cell. The walls were irregular - there were 6 walls, each of different size, and a metal door with a small opening that seemed to be a window. With me in the room was a toilet, a bed with a pillow and blanket, a desk with some papers and a pencil, a lamp, and a flower pot next to the door. There was also a book titled "The Prison led by the Prisoners", but the contents were of a different language - one I could not read nor interpret.</p>
-    <p>I just hope I can get out of this place. I probably did something wrong, but not against the law. At least, not that I know of.</p>
-    <p>I wonder who these people are.</p>
+<h2>The Adventurer's Journal</h2>
+<p>Today I ventured into the woods alone. Boss said I was supposed to have a team of 4 accompany me throughout the trip, but the people he picked were not worthy of the title "Explorer" - they were drunk almost all the time, weeing their pants whenever and trudging around like zombies. Filthy creatures they were, the lot!</p>
+<p>Anyways, I travelled for days, through mirky waters and narrow pathways, unsure of what I was going to find. To be honest, I wasn't exactly sure where I was headed - there were no maps or a GPS system to guide me, nor was there any sign of society ahead. All I could do was to keep walking.</p>
+<p>At one point my canteen was empty and the last remaining source of food I had were nothing but breadcrumbs. I felt like stopping to harvest berries from the trees around me - and there were few, yet more than enough - if it wasn't for the laser beam that suddenly appeared in the sky.</p>
+<p>My curiosity got the better of me. I raced to the top of the hill ahead of me to get a closer look. I thought I was near people, but what I saw instead was terrifying.</p>
+<p>There were thousands upon thousands of corpses - mostly skeletons - piled up around some strange machine in the ground. It was that particular machine that shot the laser up high into the sky. Very bright, it was! But why were there so many dead bodies?</p>
+<p>I leaned forward to get a closer look. And that was when I heard shouting from behind the machine:</p>
+<p>"How long until we turn this thing off, boss?"</p>
+<p>"Around 2 more minutes, then we can throw the bodies in the laser!"</p>
+<p>"Aye! Wanna visit Fred after this?"</p>
+<p>"It's the 6th of August, Guy! We ain't getting welcomed to that nerd today!"</p>
+<p>"Fair point!"</p>
+<p>"Let's just get this job done, innit?"</p>
+<p>Throw the bodies?! Throw the bodies into the laser?! That was the most insane thing I've ever heard in my life. These people were either war criminals or they had no care for corpses - although I fancy they might be both.</p>
+<p>I crawled over to see if I could find the two people communicating with each other - then something hit me in the head, and I blacked out.</p>
+<p>I am writing this in what seems to be a prison cell. The walls were irregular - there were 6 walls, each of different size, and a metal door with a small opening that seemed to be a window. With me in the room was a toilet, a bed with a pillow and blanket, a desk with some papers and a pencil, a lamp, and a flower pot next to the door. There was also a book titled "The Prison led by the Prisoners", but the contents were of a different language - one I could not read nor interpret.</p>
+<p>I just hope I can get out of this place. I probably did something wrong, but not against the law. At least, not that I know of.</p>
+<p>I wonder who these people are.</p>
+</div>
+
+<div>
+<h2>A Study of the Properties of Subject 154-C</h2>
+<h3>Written by Assistant Scientist Kianna</h3>
+<p>At first glance, Subject 154-C looks like a lime-colored humanoid figure made of sodium borate and water. However, there are certain properties the subject has that violates many known laws of science, but abides by our Sciencia Superphysics Theory. It has the ability to shoot out a certain kind of hydrochloric acid that penetrates through walls thinner than 10 centimeters. When shooting at a wall that is thicker than the required dimensions, there is no penetration. Similarly, shooting at any living being does not affect the target physically or psychologically, but the target could experience slight memory loss. The subject seems to make a high-pitched grumble before shooting, though it sometimes shoots without warning. Subject 154-C is also responsible for the death of Subject 122-B, which is now a non-living entity faded away into the vast nothingness of space.</p>
+<p>The cell composition of the subject is unknown. We could not examine the subject any closer nor take a sample due to restrictions commanded by Senior Scientist Caspian.</p>
+<p>When provoked, the subject grows three antennas on the top of its head. These antennas transmit infrared waves in a particular order, which is thought to be the subject's form of communicating with other subjects similar to itself. However, deciphering these signals is still in progress. The existence of what is thought to be its language suggests that there are other similar creatures out there, waiting to be unearthed. A theory kindly developed by Assistant Elle suggests that there was life like this millions of years before the dinosaurs, and the Earth is older than we thought it to be.</p>
+<p>Further research will continue on August 7.</p>
+</div>
+
+<div>
+<h2>The Red Notice</h2>
+<p>To whom it may concern:</p>
+<p>Interpol has issued an arrest warrant for Sciencia Senior Scientist Martha of the Supernatural Metaphysics and Macrobiology Division. Recent evidence suggests she is responsible for the incident at the Mediterranean Sciencian Laboratory that has caused the deaths of over 50 important scientists. Work will be allowed to continue in the new laboratory, but all research under her name will be credited to Sciencia Senior Scientist Caspian.</p>
+<p>Martha will be sent to Psychi-Gham Prison in Indonesia, where she will be restricted from touching any scientific equipment for the rest of her life. We have already sent agents to her hideout in New York, although if necessary, we may accept help from your agents as well.</p>
+<p>We apologize for eliminating the escaped subjects of Sciencia, although it was deemed correct to rectify her mistake immediately. We are working on cover-ups and getting rid of the evidence to avoid any suspicion from the media.</p>
+<p>May the glory of Sciencian Research continue and benefit us all.</p>
+</div>
+
+<div>
+<h2>The Sciencian General Theory</h2>
+<h3></h3>
+<p></p>
 </div>
 
 </section>
