updated discord rules

--- a/discordrules.html
+++ b/discordrules.html
@@ -11,7 +11,7 @@ html, body {
 	margin-left: 15px;
 	margin-right: 15px;
 	font-family: sans-serif;
-	color: rgb(169, 238, 169);
+	color: rgb(83, 255, 83);
 	background: rgb(39, 34, 34);
 }
 </style>
@@ -74,7 +74,7 @@ These include:
 <br>
 - Links to Quick Driver Updater. EVERY DRIVER UPDATER IS MALWARE.
 <br>
-- VBS files. Many viruses come in the hidden form of VBS files.
+- VBS files. Many viruses come in the hidden form of VBS files. Even though your script may be safe, I still cannot trust you to upload these sort of files.
 <br>
 - Gore Media. Regardless of the intention, it can come as a shock to many people in the server.
 <br>
@@ -119,7 +119,7 @@ Some of these - specifically chains - can be done in the chain channel.
 
 
 
-<h2>III. MODERATION</h2>
+<h2>IV. MODERATION</h2>
 Do not simply ask for staff. It will be given to you when I decide it will be given to you. If you are to apply for staff you will strongly need acceptable experience as well as evidence.
 <br>
 No creating, modifying, or deleting roles, channels, invites and categories without permission from the owner. The level of moderation here is medium and has a 2FA requirement.
@@ -138,7 +138,7 @@ If you notice any one of our staff misbehaving, report immediately to superior a
 
 
 
-<h2>IV. GIVEAWAYS</h2>
+<h2>V. GIVEAWAYS</h2>
 No begging. If you got re-rolled thats probably because you didnt respond in time, and we dont need your verification on if we host legit or not.
 <br>
 If you have won a giveaway but the giveaway host is offline, either wait for the host to become online and DM them there and then, or DM them while they're offline and they can give the prize once they are online.
@@ -147,7 +147,7 @@ If the giveaway host is online and you have DM'd them but they have not given th
 
 
 
-<h2>V. LOOPHOLES, BYPASSES, AND FALLACIES</h2>
+<h2>VI. LOOPHOLES, BYPASSES, AND FALLACIES</h2>
 You are not allowed to use loopholes, false arguments and the like to escape a designated consequence for breaking a rule. These include:
 <br>
 - Attribution: "If he did it in another server without getting banned then I can do it in this server."
