--- a/discordrules.html
+++ b/discordrules.html
@@ -38,7 +38,7 @@ Chains must only be done in the designated chain channel, advertisement in the a
 <br>
 No making fun of religious, life-threatening or political topics.
 <br>
-No toxicity, harrassment, or racism.
+No toxicity, harrassment, or racism. And do your best not to swear.
 <br>
 No starting flaming arguments or debates that can get out of hand.
 <br>
